STA 141C Final Project

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,26 @@
 Package: blblm
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Bag of Little Bootstraps
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Daniel R Smith 
+Maintainer: The package maintainer <drssmith@ucdavis.edu>
+Description: Bag of Little Bootstraps linear model contains the functions requisit of estimating a statistic by using
+    the bag of little bootstraps method and parallelization. the user can specify the number of cores desired in the blblm_par function. 
+    the user can also pass a list of data files. 
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    blblm,
+    knitr,
+    rmarkdown,
+    tidyverse
 Imports: 
     purrr,
-    magrittr
+    magrittr,
+    readr,
+    tidyverse,
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
+VignetteBuilder: knitr
